--- a/index.html
+++ b/index.html
@@ -9,52 +9,52 @@
 <body>
     <h1>Nature is Pretty Cool Sometimes</h1>
 
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>  
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="images/image1%20copy.jpg" class="d-block w-100" alt="Lake Hope">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Lake Hope</h5>
-        <p>A view of Lake Hope from the Main Lodge.</p>
-      </div>
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/image1%20copy.jpg" class="d-block w-100" alt="Lake Hope">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Lake Hope</h5>
+                    <p>A view of Lake Hope from the Main Lodge.</p>
+                </div> <!-- close .carousel-caption -->
+            </div> <!-- close .carousel-item -->
+            <div class="carousel-item">
+                <img src="images/image2%20copy.jpg" class="d-block w-100" alt="Furnace">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Lake Hope Furnace</h5>
+                    <p>The Historic furnace used to heat the lodges of Lake Hope.</p>
+                </div> <!-- close .carousel-caption -->
+            </div> <!-- close .carousel-item -->
+            <div class="carousel-item">
+                <img src="images/image3%20copy.jpg" class="d-block w-100" alt=Ladybug>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Ladybug on a tree</h5>
+                    <p>A ladybug just chillin on a tree.</p>
+                </div> <!-- close .carousel-caption -->
+            </div> <!-- close .carousel-item -->
+            <div class="carousel-item">
+                <img src="images/image4.jpg" class="d-block w-100" alt="Idiot">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>South Chagrin Reservation</h5>
+                    <p>located in Northeast Ohio, great for hiking.</p>
+                </div> <!-- close .carousel-caption -->
+            </div> <!-- close .carousel-item -->
+        </div> <!-- close .carousel-inner -->
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <div class="carousel-item">
-      <img src="images/image2%20copy.jpg" class="d-block w-100" alt="Furnace">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Lake Hope Furnace</h5>
-        <p>The Historic furnace used to heat the lodges of Lake Hope.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="images/image3%20copy.jpg" class="d-block w-100" alt=Ladybug>
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Ladybug on a tree</h5>
-        <p>A ladybug just chillin on a tree.</p>
-      </div>
-    </div>
-      <div class="carousel-item">
-      <img src="images/image4.jpg" class="d-block w-100" alt="Idiot">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>South Chagrin Reservation</h5>
-        <p>located in Northeast Ohio, great for hiking.</p>
-      </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
 
 
@@ -62,6 +62,4 @@
 
 
 
-</body>
-
-</html>
+</body></html>
